--- a/client/src/App.css
+++ b/client/src/App.css
@@ -449,3 +449,95 @@ time.icon span {
   display: flex;
   gap: 10px;
 }
+.d-block {
+  color: white;
+}
+/* App.css */
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: Arial, sans-serif;
+}
+
+/* Background image with overlay */
+.login-background {
+  background: url("/college.jpg") no-repeat center center fixed;
+  background-size: cover;
+  position: relative;
+  height: 113.5%;
+  width: 100%;
+}
+
+.login-background::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.4); /* dark overlay to reduce brightness */
+  z-index: 1;
+}
+
+.login-container {
+  position: relative;
+  z-index: 2;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 77px;
+}
+
+/* Box styling */
+.login-box {
+  background-color: white;
+  padding: 35px;
+  border-radius: 10px;
+  width: 100%;
+  max-width: 420px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  text-align: center;
+}
+
+/* College logo */
+.login-logo img {
+  width: 300px;
+  margin-bottom: 20px;
+}
+
+/* Text sizes */
+.login-heading {
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+.login-box-msg {
+  font-size: 15px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.login-box .btn {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.register-box {
+  background-color: #ffffff;
+  padding: 35px;
+  border-radius: 10px;
+  width: 100%;
+  max-width: 420px;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.25);
+  text-align: center;
+}
+.register-logo img {
+  width: 140px;
+  margin-bottom: 10px;
+}
+.register-box .btn {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
